# babelfish

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Connector_Generic.kicad_sym  Functional Diagram.diagrams  LICENSE.md  NOTES.md  README.md  adb.c  apollo.c  apollo.h  babelfish-orig.kicad_pcb  babelfish-orig.kicad_pro  babelfish.kicad_pcb  babelfish.kicad_pro  babelfish.kicad_sch  babelfish.numbers  bootmode.c  debug.c  debug.h  flash.sh  fp-lib-table  hid_app.c  hid_codes.h  host.h  host_apollo.c  host_sun.c  host_sun_keyboard.c  main.c  notes.rtf  sun_keyboard.c  sym-lib-table  tusb_config.h
.github/workflows/: mac-build.yml
babelfish.pretty/: USB-A-TH__USB-AF-90.kicad_mod
docs/: keyboard_adapters.md  montable.txt
gerbers/: babelfish-B_Mask.gbs  babelfish-B_Paste.gbp  babelfish-B_Silkscreen.gbo  babelfish-F_Cu.gtl  babelfish-F_Mask.gts  babelfish-In2_Cu.g3  babelfish-NPTH-drl_map.gbr  babelfish-NPTH.drl
hardware/: .gitignore  NOTES.md  babelfish.kicad_pcb  babelfish.kicad_pro  babelfish.kicad_sch
hardware/jlcpcb/: project.db
hardware/jlcpcb/gerber/: babelfish-CuBottom.gbr  babelfish-CuIn1.gbr  babelfish-CuIn2.gbr  babelfish-CuTop.gbr  babelfish-EdgeCuts.gbr  babelfish-MaskBottom.gbr  babelfish-MaskTop.gbr  babelfish-NPTH.drl  babelfish-PTH.drl  babelfish-PasteBottom.gbr  babelfish-PasteTop.gbr  babelfish-SilkBottom.gbr  babelfish-SilkTop.gbr  babelfish-VScore.gbr
hardware/parts/: fetch_part.sh
hardware/parts/JLC2KiCad_lib/lcsc.pretty/: HDR-SMD_10P-P1.27-V-M-R2-C5-LS5.3.kicad_mod  HSOP-8_L5.0-W4.0-P1.27-LS6.2-BL-EP.kicad_mod  IND-SMD_L5.8-W5.2_SCD0503T.kicad_mod  IND-SMD_L6.0-W6.0_FNR60XXS.kicad_mod  OSC-SMD_4P-L3.2-W2.5-BL.kicad_mod  SOIC-16_L9.9-W3.9-P1.27-LS6.0-BL.kicad_mod  SON-8_L3.0-W3.0-P0.65-LS3.0-BL-EP.kicad_mod  SOT-223_L6.5-W3.5-P2.30-LS7.0-BR.kicad_mod  SOT-23-3_L2.9-W1.6-P1.90-LS2.8-BR.kicad_mod  SOT-23-6_L2.9-W1.6-P0.95-LS2.8-BR.kicad_mod  SOT-583-8_L2.1-W1.2-P0.50-LS1.6-BR.kicad_mod  SSOP-28_L9.9-W3.9-P0.64-LS6.0-BL-1.kicad_mod  SW-SMD_12P-L9.2-W5.4-P1.27-LS8.5.kicad_mod  SW-SMD_4P-L2.8-W2.4-P1.60-LS3.0.kicad_mod  SW-SMD_4P-L6.3-W6.2-P4.00-LS9.4-TL.kicad_mod  SW-SMD_DSIC12LSGET.kicad_mod  SW-TH_16P-L21.9-W9.9-P2.54-LS7.6.kicad_mod  SW-TH_DSWB04LHGET.kicad_mod  SW-TH_DSWB06LHGET.kicad_mod  SW-TH_SHOU_SK12D07VG5.kicad_mod  SW-TH_SS-23F20-G050.kicad_mod  TSSOP-16_L5.0-W4.4-P0.65-LS6.4-BL.kicad_mod  TSSOP-16_L5.0-W4.4-P0.65-LS6.4-TL.kicad_mod
hardware/parts/JLC2KiCad_lib/lcsc.pretty/packages3d/: ESOP-8_L4.9-W3.9-P1.27-LS6.0-BL-EP-4.wrl  HDR-SMD_10P-P1.27-V-M-R2-C5-LS5.3.wrl  HSOP-8_L5.0-W4.0-P1.27-LS6.2-BL-EP.wrl  IND-SMD_L5.8-W5.2_SCD0503T.wrl  SOT-583-8_L2.1-W1.2-P0.50-LS1.6-BR.wrl  SSOP-28_L9.9-W3.9-P0.64-LS6.0-BL-1.wrl  SW-SMD_12P-L9.2-W5.4-P1.27-LS8.5.wrl  SW-SMD_4P-L2.8-W2.4-P1.60-LS3.0.wrl  SW-SMD_4P-L6.3-W6.2-P4.00-LS9.4-TL.wrl  SW-SMD_DSIC12LSGET.wrl  SW-SMD_L4.0-W2.9-LS5.0.wrl  (+4 more)
hardware/parts/JLC2KiCad_lib/symbol/: lcsc.kicad_sym
hardware/parts/babelfish.pretty/: USB-A-TH__USB-AF-90.kicad_mod
hardware/v1/: babelfish-save.kicad_pro  babelfish_v01.kicad_pcb  babelfish_v01.kicad_sch  saved_stack_usb.kicad_sch
hardware/v2/: babelfish-B_Cu.gbl  babelfish-In1_Cu.g2  babelfish-In2_Cu.g3
new_stdio_usb/: reset_interface.c  stdio_usb.c  stdio_usb_descriptors.c
new_stdio_usb/include/pico/: stdio_usb.h
parts/: fetch_part.sh
parts/JLC2KiCad_lib/Schematic/: lcsc.kicad_sym
parts/JLC2KiCad_lib/lcsc.pretty/: CRYSTAL-SMD_4P-L3.2-W2.5-BL.kicad_mod  DSUB-TH_DMR-9S.kicad_mod  ESOP-8_L4.9-W3.9-P1.27-LS6.0-BL-EP-4.kicad_mod  SOIC-8_L5.3-W5.3-P1.27-LS8.0-BL.kicad_mod  SOP-8_L4.9-W3.9-P1.27-LS6.0-TL-EP.kicad_mod  SOT-223-3_L6.5-W3.4-P2.30-LS7.0-BR.kicad_mod  SOT-23-3_L2.9-W1.3-P1.90-LS2.4-BR.kicad_mod  SOT-23-5_L3.0-W1.6-P0.95-LS2.8-BL.kicad_mod  SOT-25-5_L2.9-W1.6-P0.95-LS2.8-BL.kicad_mod  SOT-89_L4.5-W2.5-P1.50-LS4.2-BR.kicad_mod  SW-SMD_L4.0-W2.9-LS5.0.kicad_mod  USB-A-TH_AF-WJDG.kicad_mod  USB-A-TH_USB-M-51.kicad_mod  USB-C-SMD_G-SWITCH_GT-USB-7010ASV.kicad_mod  USB-C-SMD_KH-TYPE-C-16P.kicad_mod  VQFN-HR-15_L3.0-W2.5-P0.50-BL_TPS63070RNMR.kicad_mod
parts/JLC2KiCad_lib/lcsc.pretty/packages3d/: SOT-23-5_L3.0-W1.6-P0.95-LS2.8-BL.wrl  SOT-25-5_L2.9-W1.6-P0.95-LS2.8-BL.wrl  SW-TH_DSWB04LHGET.wrl  USB-A-TH_AF-WJDG.wrl  USB-A-TH_USB-M-51.wrl
parts/JLC2KiCad_lib/symbol/: lcsc.kicad_sym
parts/Likapa-UsbConnectors.pretty/: TYPEC31M17.kicad_mod
parts/SnapEDA-Library/: SnapEDA-Library.kicad_sym
parts/SnapEDA-Library/Footprints.pretty/: 490107670412.kicad_mod  490107670612.kicad_mod
src/: babelfish.h  babelfish_hw.h  babelfish_test.c  bootmode.c  cmd.c  dbg_print.c  debug.c  debug.h  events.h  hid_app.c  hid_codes.h  host.h  host_adb.c  host_apollo.c  host_apollo_dn300.c  host_next.c  host_sun.c  host_sun_keyboard.c  host_sun_keycodes.h  host_sun_mouse.c  host_test.c  hw_aux.c  hwtest.c  main.c  next.pio  output.c  tusb_config.h  usb_descriptors.c  usb_reset_interface.c
src/stdio_nusb/: reset_interface.c  stdio_usb.c  stdio_usb.h
v1/gerbers/: babelfish-B_Cu.gbl  babelfish-Edge_Cuts.gm1  babelfish-F_Paste.gtp  babelfish-F_Silkscreen.gto  babelfish-In1_Cu.g2  babelfish-PTH-drl_map.gbr  babelfish-PTH.drl
v2/: babelfish-B_Cu.gbl  babelfish-B_Mask.gbs  babelfish-B_Paste.gbp  babelfish-B_Silkscreen.gbo  babelfish-Edge_Cuts.gm1  babelfish-F_Cu.gtl  babelfish-F_Mask.gts  babelfish-F_Paste.gtp  babelfish-F_Silkscreen.gto  babelfish-In1_Cu.g2  babelfish-In2_Cu.g3  babelfish-NPTH-drl_map.gbr  babelfish-NPTH.drl  babelfish-PTH-drl_map.gbr  babelfish-PTH.drl  babelfish.step
